minimal changes too build lineage-19.1

--- a/arch/arm64/boot/dts/samsung/gts/sm8150-sec-gts6lwifi-overlay-r06.dts
+++ b/arch/arm64/boot/dts/samsung/gts/sm8150-sec-gts6lwifi-overlay-r06.dts
@@ -6064,10 +6064,6 @@
 
 			android {
 
-				vbmeta {
-					compatible = "android,vbmeta";
-					parts = "vbmeta,boot,system,vendor,product,recovery,dtbo,abl,xbl,tz,hyp";
-				};
 
 				fstab {
 					compatible = "android,fstab";
@@ -6077,7 +6073,7 @@
 						dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/product";
 						type = "ext4";
 						mnt_flags = "ro,errors=panic";
-						fsmgr_flags = "wait,verify,avb";
+						fsmgr_flags = "wait";
 					};
 
 					vendor {
@@ -6085,7 +6081,7 @@
 						dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/vendor";
 						type = "ext4";
 						mnt_flags = "ro,barrier=1,discard";
-						fsmgr_flags = "wait,verify,avb";
+						fsmgr_flags = "wait";
 					};
 				};
 			};
