--- a/arch/arm64/boot/dts/samsung/Makefile
+++ b/arch/arm64/boot/dts/samsung/Makefile
@@ -2,6 +2,7 @@ ifeq ($(filter y,$(CONFIG_SEC_BEYOND0QLTE_PROJECT) $(CONFIG_SEC_BEYOND1QLTE_PROJ
 else ifeq ($(filter y,$(CONFIG_SEC_D1Q_PROJECT) $(CONFIG_SEC_D2Q_PROJECT) $(CONFIG_SEC_D2XQ_PROJECT) $(CONFIG_SEC_D2XQ2_PROJECT)),y)
 else ifeq ($(filter y,$(CONFIG_SEC_WINNERLTE_PROJECT) $(CONFIG_SEC_WINNERX_PROJECT)),y)
 else ifeq ($(filter y,$(CONFIG_SEC_GTS6L_PROJECT) $(CONFIG_SEC_GTS6LWIFI_PROJECT) $(CONFIG_SEC_GTS6X_PROJECT)),y)
+dts-dirs += gts
 else ifeq ($(filter y,$(CONFIG_SEC_BLOOMQ_PROJECT)),y)
 else ifeq ($(filter y,$(CONFIG_SEC_BOLTQ5G_PROJECT)),y)
 else ifeq ($(filter y,$(CONFIG_SEC_R5Q_PROJECT) $(CONFIG_SEC_R3Q_PROJECT)),y)
